crates/orator-core/tests/snapshots/codegen_types__additional_properties.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator vtest
// Do not edit manually.
// AdditionalProperties Test | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(deny_unknown_fields)]
pub struct ClosedUser {
    pub id: i32,
    pub name: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(deny_unknown_fields)]
pub struct EmptyClosedObject {}
pub type OpenObject = std::collections::HashMap<String, String>;
pub type StringMap = std::collections::HashMap<String, String>;
