crates/orator-core/tests/snapshots/codegen_types__allof_composition.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator vtest
// Do not edit manually.
// allOf Schemas | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Base {
    pub id: i64,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Extended {
    #[serde(flatten)]
    pub base: Base,
    pub name: String,
}
