crates/orator-core/tests/snapshots/codegen_types__anyof.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator v0.7.0
// Do not edit manually.
// anyOf Schemas | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(untagged)]
pub enum StringOrInt {
    String(String),
    I32(i32),
}
