crates/orator-core/tests/snapshots/codegen_types__arrays.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator v0.6.0
// Do not edit manually.
// Array Schemas | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
pub type Strings = Vec<String>;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Tag {
    pub name: String,
}
pub type Tags = Vec<Tag>;
