crates/orator-core/tests/snapshots/codegen_types__basic_object.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator v0.6.0
// Do not edit manually.
// Basic Schemas | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct User {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub active: Option<bool>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub age: Option<i32>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub email: Option<String>,
    pub id: i64,
    pub name: String,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub rating: Option<f64>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub score: Option<f32>,
}
