crates/orator-core/tests/snapshots/codegen_types__datetime.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator v0.6.0
// Do not edit manually.
// DateTime Test | v1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
pub type DateAlias = orator_axum::chrono::NaiveDate;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Event {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub cancelled_at: Option<orator_axum::chrono::DateTime<orator_axum::chrono::Utc>>,
    pub date: orator_axum::chrono::NaiveDate,
    pub name: String,
    pub starts_at: orator_axum::chrono::DateTime<orator_axum::chrono::Utc>,
}
