crates/orator-core/tests/snapshots/codegen_types__dollar_prefix.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator v0.6.0
// Do not edit manually.
// Dollar Prefix Schemas | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct PolymorphicMessage {
    #[serde(rename = "$")]
    #[serde(skip_serializing_if = "Option::is_none")]
    pub value: Option<String>,
    #[serde(rename = "$type")]
    pub r#type: String,
    pub body: String,
}
