crates/orator-core/tests/snapshots/codegen_types__inline_objects.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator vtest
// Do not edit manually.
// Inline Object Promotion | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Catalogue {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub entries: Option<Vec<CatalogueEntriesItem>>,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Clash {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub child: Option<ClashChild2>,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct ClashChild {
    pub unrelated: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Container {
    pub payload: ContainerPayload,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Outer {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub middle: Option<OuterMiddle>,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Parent {
    pub child: ParentChild,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(deny_unknown_fields)]
pub struct CatalogueEntriesItem {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub qty: Option<i32>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub sku: Option<String>,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(deny_unknown_fields)]
pub struct ClashChild2 {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub note: Option<String>,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct ContainerPayload {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub id: Option<i64>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub label: Option<String>,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(deny_unknown_fields)]
pub struct OuterMiddleInner {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub value: Option<String>,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(deny_unknown_fields)]
pub struct OuterMiddle {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub inner: Option<OuterMiddleInner>,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(deny_unknown_fields)]
pub struct ParentChild {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub a: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub b: Option<String>,
}
