crates/orator-core/tests/snapshots/codegen_types__json_value.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator vtest
// Do not edit manually.
// JSON Value Schemas | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct ErrorDetail {
    pub code: String,
    pub value: orator_axum::serde_json::Value,
}
pub type JsonNode = orator_axum::serde_json::Value;
