crates/orator-core/tests/snapshots/codegen_types__nullable_fields.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator v0.7.0
// Do not edit manually.
// Nullable Schemas | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Profile {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub bio: Option<String>,
    pub name: String,
}
