crates/orator-core/tests/snapshots/codegen_types__oneof_discriminator.snap
---
source: crates/orator-core/tests/codegen_types.rs
expression: code
---
// Generated by orator vtest
// Do not edit manually.
// oneOf Schemas | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Circle {
    pub radius: f32,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Rectangle {
    pub height: f32,
    pub width: f32,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(tag = "type")]
pub enum Shape {
    Circle(Circle),
    Rectangle(Rectangle),
}
