crates/orator-core/tests/snapshots/codegen_types__oneof_mapping.snap
---
source: crates/orator-core/tests/codegen_types.rs
assertion_line: 140
expression: code
---
// Generated by orator vtest
// Do not edit manually.
// Discriminator Mapping | v1.0.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Apple {
    pub color: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Banana {
    pub length: i32,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Cat {
    pub meow: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Circle {
    pub radius: f32,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Color {
    pub hex: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Dog {
    pub bark: String,
}
#[derive(Debug, Clone, PartialEq)]
pub enum Fruit {
    RedApple(Apple),
    Banana(Banana),
}
impl orator_axum::serde::Serialize for Fruit {
    fn serialize<S>(&self, serializer: S) -> ::core::result::Result<S::Ok, S::Error>
    where
        S: orator_axum::serde::Serializer,
    {
        match self {
            Self::RedApple(inner) => {
                orator_axum::serde::Serialize::serialize(inner, serializer)
            }
            Self::Banana(inner) => {
                orator_axum::serde::Serialize::serialize(inner, serializer)
            }
        }
    }
}
impl<'de> orator_axum::serde::Deserialize<'de> for Fruit {
    fn deserialize<D>(deserializer: D) -> ::core::result::Result<Self, D::Error>
    where
        D: orator_axum::serde::Deserializer<'de>,
    {
        use orator_axum::serde::Deserialize;
        let value = orator_axum::serde_json::Value::deserialize(deserializer)?;
        let tag = value
            .get("kind")
            .and_then(|v| v.as_str())
            .ok_or_else(|| orator_axum::serde::de::Error::missing_field("kind"))?
            .to_string();
        match tag.as_str() {
            "red-apple" => {
                let inner: Apple = orator_axum::serde_json::from_value(value)
                    .map_err(orator_axum::serde::de::Error::custom)?;
                Ok(Self::RedApple(inner))
            }
            "Banana" => {
                let inner: Banana = orator_axum::serde_json::from_value(value)
                    .map_err(orator_axum::serde::de::Error::custom)?;
                Ok(Self::Banana(inner))
            }
            other => {
                Err(
                    orator_axum::serde::de::Error::unknown_variant(
                        other,
                        &["red-apple", "Banana"],
                    ),
                )
            }
        }
    }
}
#[derive(Debug, Clone, PartialEq)]
pub enum Paint {
    Red(Color),
    Red_2(Color),
}
impl orator_axum::serde::Serialize for Paint {
    fn serialize<S>(&self, serializer: S) -> ::core::result::Result<S::Ok, S::Error>
    where
        S: orator_axum::serde::Serializer,
    {
        match self {
            Self::Red(inner) => {
                orator_axum::serde::Serialize::serialize(inner, serializer)
            }
            Self::Red_2(inner) => {
                orator_axum::serde::Serialize::serialize(inner, serializer)
            }
        }
    }
}
impl<'de> orator_axum::serde::Deserialize<'de> for Paint {
    fn deserialize<D>(deserializer: D) -> ::core::result::Result<Self, D::Error>
    where
        D: orator_axum::serde::Deserializer<'de>,
    {
        use orator_axum::serde::Deserialize;
        let value = orator_axum::serde_json::Value::deserialize(deserializer)?;
        let tag = value
            .get("shade")
            .and_then(|v| v.as_str())
            .ok_or_else(|| orator_axum::serde::de::Error::missing_field("shade"))?
            .to_string();
        match tag.as_str() {
            "Red" => {
                let inner: Color = orator_axum::serde_json::from_value(value)
                    .map_err(orator_axum::serde::de::Error::custom)?;
                Ok(Self::Red(inner))
            }
            "red" => {
                let inner: Color = orator_axum::serde_json::from_value(value)
                    .map_err(orator_axum::serde::de::Error::custom)?;
                Ok(Self::Red_2(inner))
            }
            other => {
                Err(
                    orator_axum::serde::de::Error::unknown_variant(
                        other,
                        &["Red", "red"],
                    ),
                )
            }
        }
    }
}
#[derive(Debug, Clone, PartialEq)]
pub enum Pet {
    Kitty(Cat),
    Puppy(Dog),
}
impl orator_axum::serde::Serialize for Pet {
    fn serialize<S>(&self, serializer: S) -> ::core::result::Result<S::Ok, S::Error>
    where
        S: orator_axum::serde::Serializer,
    {
        match self {
            Self::Kitty(inner) => {
                orator_axum::serde::Serialize::serialize(inner, serializer)
            }
            Self::Puppy(inner) => {
                orator_axum::serde::Serialize::serialize(inner, serializer)
            }
        }
    }
}
impl<'de> orator_axum::serde::Deserialize<'de> for Pet {
    fn deserialize<D>(deserializer: D) -> ::core::result::Result<Self, D::Error>
    where
        D: orator_axum::serde::Deserializer<'de>,
    {
        use orator_axum::serde::Deserialize;
        let value = orator_axum::serde_json::Value::deserialize(deserializer)?;
        let tag = value
            .get("kind")
            .and_then(|v| v.as_str())
            .ok_or_else(|| orator_axum::serde::de::Error::missing_field("kind"))?
            .to_string();
        match tag.as_str() {
            "kitty" => {
                let inner: Cat = orator_axum::serde_json::from_value(value)
                    .map_err(orator_axum::serde::de::Error::custom)?;
                Ok(Self::Kitty(inner))
            }
            "puppy" => {
                let inner: Dog = orator_axum::serde_json::from_value(value)
                    .map_err(orator_axum::serde::de::Error::custom)?;
                Ok(Self::Puppy(inner))
            }
            other => {
                Err(
                    orator_axum::serde::de::Error::unknown_variant(
                        other,
                        &["kitty", "puppy"],
                    ),
                )
            }
        }
    }
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct PolyominoBody {
    pub size: i32,
}
#[derive(Debug, Clone, PartialEq)]
pub enum Puzzle {
    HexaBlocks(PolyominoBody),
    QuatroBlocks(PolyominoBody),
    QuatroLegacy(RegionBalanceBody),
    TrioMino(PolyominoBody),
}
impl orator_axum::serde::Serialize for Puzzle {
    fn serialize<S>(&self, serializer: S) -> ::core::result::Result<S::Ok, S::Error>
    where
        S: orator_axum::serde::Serializer,
    {
        match self {
            Self::HexaBlocks(inner) => {
                orator_axum::serde::Serialize::serialize(inner, serializer)
            }
            Self::QuatroBlocks(inner) => {
                orator_axum::serde::Serialize::serialize(inner, serializer)
            }
            Self::QuatroLegacy(inner) => {
                orator_axum::serde::Serialize::serialize(inner, serializer)
            }
            Self::TrioMino(inner) => {
                orator_axum::serde::Serialize::serialize(inner, serializer)
            }
        }
    }
}
impl<'de> orator_axum::serde::Deserialize<'de> for Puzzle {
    fn deserialize<D>(deserializer: D) -> ::core::result::Result<Self, D::Error>
    where
        D: orator_axum::serde::Deserializer<'de>,
    {
        use orator_axum::serde::Deserialize;
        let value = orator_axum::serde_json::Value::deserialize(deserializer)?;
        let tag = value
            .get("type")
            .and_then(|v| v.as_str())
            .ok_or_else(|| orator_axum::serde::de::Error::missing_field("type"))?
            .to_string();
        match tag.as_str() {
            "hexa-blocks" => {
                let inner: PolyominoBody = orator_axum::serde_json::from_value(value)
                    .map_err(orator_axum::serde::de::Error::custom)?;
                Ok(Self::HexaBlocks(inner))
            }
            "quatro-blocks" => {
                let inner: PolyominoBody = orator_axum::serde_json::from_value(value)
                    .map_err(orator_axum::serde::de::Error::custom)?;
                Ok(Self::QuatroBlocks(inner))
            }
            "quatro-legacy" => {
                let inner: RegionBalanceBody = orator_axum::serde_json::from_value(value)
                    .map_err(orator_axum::serde::de::Error::custom)?;
                Ok(Self::QuatroLegacy(inner))
            }
            "trio-mino" => {
                let inner: PolyominoBody = orator_axum::serde_json::from_value(value)
                    .map_err(orator_axum::serde::de::Error::custom)?;
                Ok(Self::TrioMino(inner))
            }
            other => {
                Err(
                    orator_axum::serde::de::Error::unknown_variant(
                        other,
                        &["hexa-blocks", "quatro-blocks", "quatro-legacy", "trio-mino"],
                    ),
                )
            }
        }
    }
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct RegionBalanceBody {
    pub regions: i32,
}
#[derive(Debug, Clone, PartialEq)]
pub enum Shape {
    RoundThing(Circle),
    Square(Square),
}
impl orator_axum::serde::Serialize for Shape {
    fn serialize<S>(&self, serializer: S) -> ::core::result::Result<S::Ok, S::Error>
    where
        S: orator_axum::serde::Serializer,
    {
        match self {
            Self::RoundThing(inner) => {
                orator_axum::serde::Serialize::serialize(inner, serializer)
            }
            Self::Square(inner) => {
                orator_axum::serde::Serialize::serialize(inner, serializer)
            }
        }
    }
}
impl<'de> orator_axum::serde::Deserialize<'de> for Shape {
    fn deserialize<D>(deserializer: D) -> ::core::result::Result<Self, D::Error>
    where
        D: orator_axum::serde::Deserializer<'de>,
    {
        use orator_axum::serde::Deserialize;
        let value = orator_axum::serde_json::Value::deserialize(deserializer)?;
        let tag = value
            .get("type")
            .and_then(|v| v.as_str())
            .ok_or_else(|| orator_axum::serde::de::Error::missing_field("type"))?
            .to_string();
        match tag.as_str() {
            "round-thing" => {
                let inner: Circle = orator_axum::serde_json::from_value(value)
                    .map_err(orator_axum::serde::de::Error::custom)?;
                Ok(Self::RoundThing(inner))
            }
            "Square" => {
                let inner: Square = orator_axum::serde_json::from_value(value)
                    .map_err(orator_axum::serde::de::Error::custom)?;
                Ok(Self::Square(inner))
            }
            other => {
                Err(
                    orator_axum::serde::de::Error::unknown_variant(
                        other,
                        &["round-thing", "Square"],
                    ),
                )
            }
        }
    }
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct Square {
    pub side: f32,
}
